added JWT, added models...
